# Birdiland

./: .env.example  .gitattributes  .gitignore  README.md  demo_birdiland.py  manifest-config-examples.md  manifest.json  pyproject.toml
.clinerules/: birdiland-project.md
birdiland/: __init__.py  agent.py  config.py  gradio_ui.py  main.py
birdiland/api/: routes.py
canary/: main.py
src/canary/: __init__.py  config.py
src/canary/api/: routes.py
tests/: test_agent.py
